@@ -8,3 +8,12 @@ Usage
 -----
 
 Put the jar somewhere in `java.ext.dirs`.
+
+Run Java with additional system properties:
+
+```
+-Duser.country=XX
+-Djava.locale.providers=SPI,JRE
+```
+
+More appropriate settings pending.
